After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 765055 - No warning when xdg-app app cannot be launched
No warning when xdg-app app cannot be launched
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-04-14 14:28 UTC by Joaquim Rocha
Modified: 2016-09-10 18:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Joaquim Rocha 2016-04-14 14:28:21 UTC
When launching an xdg whose needed runtime is not installed, there's no visible warning to the user.
Maybe a shell notification would be enough for solving this.
Comment 1 Richard Hughes 2016-04-14 17:27:51 UTC
We're supposed to be installing the runtime automatically when the user clicks the install button... or is this a case where you installed the app on the command line and then tried to launch it using GS?
Comment 2 Joaquim Rocha 2016-04-15 13:11:11 UTC
I *think* I installed it from GS. Still, doesn't hurt to have a warning IMO.
Comment 3 Richard Hughes 2016-09-10 18:33:45 UTC
commit 8b08360dbf2080051a727e3ee72875b8755fac87
Author: Richard Hughes <richard@hughsie.com>
Date:   Fri Sep 9 10:29:25 2016 +0100

    Show an in-app notification if launching failed
    
    Fixes the other half of https://bugzilla.gnome.org/show_bug.cgi?id=765055

:100644 100644 e0ea391... 2822e4d... M  src/gs-shell.c

commit 6ce59bab7cd3f417d70c6c01eec0612391455890
Author: Richard Hughes <richard@hughsie.com>
Date:   Fri Sep 9 10:28:55 2016 +0100

    flatpak: Check the runtime exists before trying to launch the app
    
    Fixes half of https://bugzilla.gnome.org/show_bug.cgi?id=765055

:100644 100644 95747b8... ca90abd... M  src/plugins/gs-flatpak.c