flatpak: Check the runtime exists before trying to launch the app

Fixes half of https://bugzilla.gnome.org/show_bug.cgi?id=765055